--- a/package.json
+++ b/package.json
@@ -1,28 +1,11 @@
 {
   "name": "tictactoe-npm",
   "version": "1.0.0",
-  "description": "A simple implementation of the Tic Tac Toe game in JavaScript.",
-  "main": "tictactoe.js",
+  "description": "A simple Tic Tac Toe game for the command line",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [
-    "tictactoe",
-    "game",
-    "npm"
-  ],
   "author": "Dfuums",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Dfuums/tictactoe-npm.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Dfuums/tictactoe-npm/issues"
-  },
-  "homepage": "https://github.com/Dfuums/tictactoe-npm"
+  "license": "MIT"
 }
-"scripts": {
-  "start": "node index.js"
-}
-
