--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   },
   "dependencies": {
     "axios": "^1.6.7"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Dfuums/tictactoe11.git"
   }
 }
